# python-tools

./: .env  .env.test  .gitattributes  .gitignore  .pylintrc  README.rst  README_Angular.md  allfiles.txt  connection_log  jupiter_book.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_1.txt  setup.cfg  setup.py
flaskr/: DFS_Search.py  DFS_printTree.py  Flask-SQLAlchemy-Marshmallow.py  __init__.py  args_kwds_test.py  asyncio_event_loops.py  asyncio_event_loops_thread.py  asyncio_test.py  asyncio_test2.py  auth.py  base_convertion.py  binary.py  blog.py  case.py  cast-class-json-class.py  class_inheritence_test.py  cmd.sh  consts.py  consumer_producer_test.py  copy_test.py  currentDir.py  custom_operator.py  custom_or.py  date_format.py  debugLogger.py  debuging.py  decorator_register_plugin.py  decorator_test.py  decorator_with_args.py  default val and multi return.py  dictionary_test.py  employees.py  enums.py  evaluate.py  event_loops.py  exceptions.py  file change.py  final_test.py  format_print_test.py  generators_test.py  (+36 more)
flaskr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flaskr/Scapy/: scapy_arp_mac.py  scapy_dsn.py  scapy_snd_rcv_html.py  scapy_tcp_echo_client.py  scapy_test.py  scapy_udp_echo_client.py  udp_echo_server.py
flaskr/lib/: caesar_encryption.py  get_local_ip.py  get_pid_by_port.py  process_bar.py
flaskr/tools/: 3blue1brown.py  BeautifulSoup4.py  DFS_printTree.py  Flask-SQLAlchemy-Marshmallow.py  Hash256_validate.py  Monte_Carlo_simulation.py  addPathToModulesSearch.py  args_help.py  autocomplition_test.py  autofill.py  chaos_double_pendulum.py  config_dev.yml  console_print_color.py  current_dir.py  day_time.py  debuging.py  deepseek-r1_test.ipynb  download_uzip.py  dynamicVsStatic_recurtionVsLoop.py  elastic_search.py  env_local.ini  file change.py  files_in_dir_recurcive.py  get_post_html.py  gumini_test.ipynb  gumini_test.py  hookHotkeyAndSendKey.py  hotkey.py  http_requests_lib.py  igraph_routs.py  internet_live_relay_on_off.py  is_internet_live.py  json_prity_print.py  llama3_async_test.ipynb  llama3_test.ipynb  logging_muli_files.py  md-fo-doc.txt  memo_useg.py  memory_useg.py  mesure_mem_time.ps1  (+39 more)
flaskr/tools/Symmetric_AES_encryption/: AES_cbc_encrypt_decrypt.py  AES_eax_encrypt_decrypt.py  Hash_encript.py  rsa__encrypt_decrypt.py
flaskr/tools/ai/langchain_ai/: ollama_agent.py  pyproject.toml  tools.js
flaskr/tools/ai/langchain_ai/RGA/: comparison_embed.md  image_ollama.py  image_open_ai.py  rest_api_app.py  txt_vector.py  web_duck_search.py
flaskr/tools/ai_chat/: KaTeX.html  Llama3_1_(8B)_GRPO.ipynb  MathJax.html  MathJax2.html  chat_history.js  chat_proxy.py  chat_proxy_async.py  chat_proxy_readme.md  deepseek-r1.html  ex5.md  gemini_AI_chat_proxy.html  gemini_chat.html  gemini_chat_proxy.html  gemini_fastapi.py  gemini_fastapi_chat.py  groq_chat.html  groq_chat_proxy.html  groq_fastapi.py  lm_studio_chat.html  ollama-3.1.html  ollama.md  ollama_async.ipynb  ollama_chat.html  ollama_chat_all.html  ollama_chat_linux.html  ollama_chat_local.html  ollama_chat_proxy.html  ollama_chat_proxy_linux.html  ollama_proxy_client.html  ollama_proxy_history.py  ollama_proxy_stream.py  ollama_pyproxy.py  openrouter_chat.html  read.md  runOllamaChat.bat  runOllamaChatLocal.bat  runOllamaChatProxy.bat  sambanova_chat.html  script.js  update_math.py
flaskr/tools/c_dll/: compile.bat  compile.sh  jsonprocess.c  run_c.py
flaskr/tools/cv_2/: holimorfic.py  homomorphic.py
flaskr/tools/elastic_search/: elastic_search.py  elastic_search_orm.py  plot_resoults.py
flaskr/tools/excel/: fill_excel.py  filled_report.xlsx  filled_report_with_revenue.xlsx  read_write.py  template.xlsx
flaskr/tools/fast_api/: block_captch_5_errors_in_minit.py  fastapi_innerjoin.py  fastapi_mongo.py  fastapi_sqlmodel.py  mongo_engine.py  motor_mongo_async.py  test._fastapi.py  websocket_test.py
flaskr/tools/flask_mongo/: .env  .gitignore  .pylintrc  Pipfile  app.py  dev.sh  readMe.txt  run.bat  run.py  run.sh  setup.py
flaskr/tools/flask_sql_alchemy/: flask_innerjoin.py  logout.js  test._flask.py  test_innerjoin.py  test_upload_download_file.py  upload_download_file.py
flaskr/tools/fluid_sim/: example.py
flaskr/tools/html/: dynamic_load_html_page.html  fill_html.py  output.html  table_template.html
flaskr/tools/jupiter_plotly_scipy/: 3d_animation.ipynb  MSFT.csv  Pendulum.ipynb  control.ipynb  image_processing.ipynb  image_processing1.ipynb  ipywidgets_intro.ipynb  ipywidgets_plotly.ipynb  ipywidgets_plotly_interact.ipynb  math2.ipynb  pid_plotly_widget.ipynb  pid_widget.ipynb  plot_legend_picking.ipynb  plotly_2d_animation.ipynb  plotly_3d_animation.ipynb  plotly_subplots.ipynb  sympy1.ipynb  test.ipynb  tradingBot.ipynb
flaskr/tools/load_test/: fast_api.py  fast_api_load.py  locust_load.py  locust_report.html
flaskr/tools/md_docx/: copilot.md  mdToDocx.py  update_math.py
flaskr/tools/memory_useg/: main.py  plot_from_log.py  system_monitor_detailed.csv
flaskr/tools/numpyPandasPlotly/: 930-data-export.csv  chaos_double_pendulum.py  control.ipynb  derive_central_difference.py  doubleSlit_HW_CN.py  integrate_euler's_method.py  integrate_euler's_ode_2order.py  ipywidgets_intro.ipynb  ipywidgets_intro2.ipynb  ipywidgets_plotly.ipynb  ipywidgets_plotly_interact.ipynb  navier-stokes-spectral.py  numpy_coditions.py  numpy_dot_sovle.py  numpy_fft.py  numpy_find.py  numpy_polifit.py  panda_plot.py  pde_heatEquation1D.py  pde_heatEquation2D.py  pid_plotly_widget.ipynb  pid_widget.ipynb  pits_units.py  plot.py  plot_subPlot.py  plot_timedate.py  plotly_3d_go.py  plotly_Subplots.py  plotly_lines_express.py  plotly_lines_express_panda.py  plotly_lines_graph_objects.py  plotly_plot_lines.py  plotly_subplots.ipynb  scipy_diff.py  (+18 more)
instance/: flaskr.sqlite
rest_crud_mysql/: main.py  test.py
src/app/: app.component.html  app.component.ts  app.module.ts
src/environments/: environment.prod.ts  environment.ts
tests/: static_method_test.py  static_variable_test.py  test.ipynb  test.py  test_block_captcha.py  test_cast_json_class.py
(+279 files in other folders)
