[project]
name = "flaskr" # project nmae
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial"
readme = "README.rst"
requires-python = ">=3.10" # "~=3.10"
license = {text = "MIT"}
# manim 0.19.0 requires numpy>=2.1; python_version >= "3.10", but you have numpy 1.26.4 which is incompatible.
# pyscript 0.2.5 requires typer<0.5.0,>=0.4.1, but you have typer 0.15.2 which is incompatible.
# flask-mongoengine==1.0.0 for mongo 3.6 need also flask==2.2.5
# pymongo==4.1.1 for mongo 3.6 and motor==3.0.0 (for asnyc mongo)
# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
dependencies = [
  "flask==2.2.5", "marshmallow", "marshmallow_dataclass", "marshmallow-sqlalchemy", "flask_sqlalchemy", "pymysql", "sqlalchemy", "flask-login",
  "flask-mongoengine==1.0.0", "flask-bcrypt", "flask-cors", "flask-restful", "flask-jwt-extended", "flask-socketio", "flask-migrate", "flask-mail", "flask_jsonpify",
  "scapy", "psutil", "keyboard", "sortedcontainers", "numpy", "matplotlib", "pandas", "pandas_datareader",
  "plotly==5.24", "cufflinks", "ipykernel", "selenium", "webdriver-manager", "sympy==1.13.3", "scipy", "pycryptodome",
  "ipywidgets", "IPython", "anywidget", "seaborn", "nbformat", "openpyxl", "jupyterlab-mathjax3", "google-generativeai",
  "pint", "scikit-image", "streamlit", "vpython", "pygame", "numba", "pymunk", "opencv-python", "pyautogui",
  "yfinance", "openai", "igraph", "wget", "pyhid-usb-relay", "pywin32", "pynput",
  "websockets", "pyyaml", "beautifulsoup4","aiohttp", "nest_asyncio", "elasticsearch==2.4.1", "elasticsearch-dsl==2.2.0",
  "fastapi", "fastapi_sqlalchemy", "sqlmodel", "passlib", "uvicorn", "locust", "textblob", "flask-swagger-ui",
  "pytest" , "coverage", "python-multipart", "pyshark", "motor==3.0.0", "pymongo==4.1.1", "manim==0.18.1",
  "langchain", "langchain-ollama", "langchain-chroma", "langchain-openai", "langchain-community", "fastembed", "pdfplumber", "duckduckgo-search",
  "python-docx", "docxtpl", "xltpl", "openpyxl", "pypandoc","janus","datasets", "reportlab", "redis[asyncio]",
  # Core PyTorch
  "torch @ https://download.pytorch.org/whl/cu128/torch-2.7.1%2Bcu128-cp312-cp312-win_amd64.whl",
  # TorchVision (matches torch 2.7.1)
  "torchvision @ https://download.pytorch.org/whl/cu128/torchvision-0.22.1%2Bcu128-cp312-cp312-win_amd64.whl",
  # TorchAudio (matches torch 2.7.1)
  "torchaudio @ https://download.pytorch.org/whl/cu128/torchaudio-2.7.1%2Bcu128-cp312-cp312-win_amd64.whl",
  ]

[project.urls]
homepage = "https://your_project_homepage.com"
repository = "https://github.com/your_username/your_project"

[[project.authors]]
name = "Your Name"
email = "your_email@example.com"

[project.optional-dependencies]
test = ["pytest", "coverage"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bdist_wheel]
universal = true

[tool.coverage.run]
branch = true
source = ["flaskr"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "flaskr/tools/tests",
    "integration"
]

[tool.setuptools]
packages = ["flaskr"]
